# Femora_solver

./: .gitignore  femora_solver_spec.md  pyproject.toml
scripts/: post_process.py  post_process_wave_ricker.py  test_phase2_beam.py  verify_beam_cantilever.py  verify_cantilever.py  wave_propagation_ricker.py
src/femora_solver/: __init__.py
src/femora_solver/analysis/: runner.py  transient_explicit.py
src/femora_solver/compile/: comm_plan.py  compiler.py  execution_plan.py
src/femora_solver/constraints/: constraint_plan.py
src/femora_solver/elements/: block.py
src/femora_solver/elements/families/: beam2.py  hex8.py
src/femora_solver/fields/: field_space.py
src/femora_solver/loads/: load_plan.py
src/femora_solver/materials/: linear_elastic.py
src/femora_solver/model/: model.py
src/femora_solver/profiling/: __init__.py  timer.py
src/femora_solver/recorder/: recorder_plan.py
src/femora_solver/sections/: beam_section.py
src/femora_solver/state/: state.py
tests/: test_profiling.py
tests/phase1/: test_wave_propagation.py
